# haruspex

./: .gitattributes  .gitignore  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LLAMA_CPP_VERSION  Makefile  NOTICE.md  README.md  eslint.config.js  maintenance.md  make.bat  package-lock.json  package.json  release-please-config.json  svelte.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: build-sidecars.yml  ci.yml  release-please.yml  release.yml
audits/: architecture-2026-06-09.md  code-complexity-2026-05-14.md  code-complexity-2026-06-09.md  code-duplication-2026-05-14.md  code-duplication-2026-06-08.md  code-duplication-2026-06-25.md  code-duplication-2026-07-08.md  codebase-review-2026-06-11.md  design-patterns-2026-05-14.md  design-patterns-2026-06-09.md  x2-x3-typed-ipc-proposal.md
plan/: code_review.md  futures.md  haruspex-architecture.md  haruspex-code-tab-plan.md  openrouter-backend.md  phase-01-sidecar-utils.md  phase-02-fs-tools-split.md  phase-03-chat-ui-streaming.md  phase-04-fs-write-and-helpers.md  phase-04-model-management.md  phase-05-build-pdf-pptx.md  phase-07-runagentloop.md  phase-07-settings-polish.md  phase-07.5-voice.md  phase-08-packaging-distribution.md  phase-08-sendmessage.md  phase-10-email-integration.md  phase-11-code-sandbox.md  phase-13-workspace-tab.md  phase-15-shell-tab.md  phase-16-shell-tab-macos.md  phase-17-shell-tab-windows.md  refactor-phase-01-prompt-trimming.md  refactor-phase-02-tool-registry.md  refactor-phase-03-chat-store-extraction.md  refactor-phase-04-agent-loop-cleanup.md  refactor-phase-05-error-handling-cleanup.md  refactor-plan.md  shell-code-mode-plan.md
plan/archive/: futures.md  multi-shell-tabs-detach.md  phase-01-project-scaffolding.md  phase-02-sidecar-management.md  phase-03-modal-component.md  phase-05-agent-loop-tool-calls.md  phase-06-proxy-split-and-strategy.md  phase-06-web-search.md  phase-08-packaging-distribution.md  phase-09-local-filesystem.md  phase-09-settings-page-split.md  phase-10-main-page-split.md  phase-11-server-impl-split.md  phase-12-polish.md  phase-13-workspace-tab.md  phase-14-jobs-tab.md  phase-15-shell-tab.md
plan/coding-verification/: overview.md
plan/design_handoff_ui_refresh/: Haruspex Refreshed.dc.html  Haruspex UI Polish.dc.html  README.md  tokens-and-implementation.md
plan/guided-planning/: README.md  overview.md  phase-01-hitl-primitive.md  phase-02-question-tool.md  phase-03-db-job-model.md  phase-04-job-editor-form.md  phase-05-runner-scaffolding.md  phase-06-stage1-overview.md  phase-07-stage2-planning.md  phase-08-run-view.md  phase-09-integration-hardening.md
plan/job-plugins/: README.md  overview.md  phase-01-extract-guided-planning.md  phase-02-registry-research-pilot.md  phase-03-convert-audit-guided.md  phase-04-type-config-column.md  phase-05-coding-scaffold-preflight.md  phase-06-coding-loop-engine.md  phase-07-run-view-hardening.md
plan/phase-verification/: overview.md
plan/review-2026-07/: README.md  overview.md  phase-01-backend-responsiveness.md  phase-02-streaming-micro-perf.md  phase-03-ui-feedback-primitives.md  phase-04-destructive-confirms.md  phase-05-error-recovery.md  phase-06-accessibility.md  phase-07-onboarding-polish.md  phase-08-dead-surface-constants.md  phase-09-provider-descriptor.md
plan/write-path-integrity/: overview.md  phase-01-verdict-parsing-think-strip.md  phase-02-reject-truncated-tool-calls.md  phase-03-token-ceilings-and-settings.md  phase-04-repeat-write-guard.md  phase-05-atomic-writes.md  phase-06-detection-gate-and-nudge.md
scripts/: build-sidecars.sh  bump-version.sh  check-constants.mjs  check-ipc.mjs  dev-setup.sh  export-ipc-types.sh  fetch-pdfium.sh  fetch-pyodide.sh  fetch-ruff.sh  install-hooks.sh  link-sidecar-libs.sh  msvc-path-fix.sh  windows-setup.ps1
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: whisper-server-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/shell-integration/: haruspex.bash  haruspex.ps1  haruspex.zsh
src-tauri/src/: app_log.rs  audio.rs  clipboard.rs  code_tools.rs  db.rs  env_util.rs  feedback.rs  fs_tools.rs  hardware.rs  inference.rs  inference_queue.rs  lib.rs  links.rs  lint.rs  main.rs  models.rs  proxy.rs  sandbox_fetch.rs  sandbox_save.rs  sandbox_sync.rs  server.rs  sidecar_utils.rs  text_util.rs  time_util.rs  tts.rs  whisper.rs
src-tauri/src/db/: commands.rs  conversations.rs  jobs.rs  mod.rs  prompts.rs  runs.rs  stats.rs  tests.rs
src-tauri/src/fs_tools/: absolute.rs  docx.rs  download.rs  fuzzy.rs  images.rs  markdown_inline.rs  mod.rs  odf.rs  odp.rs  odt.rs  ooxml.rs  path.rs  pdf_read.rs  pdf_write.rs  pptx.rs  test_support.rs  text.rs  xlsx.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/email/: auth.rs  commands.rs  imap_client.rs  mod.rs  parser.rs  provider.rs  smtp_client.rs  sub_agent.rs
src-tauri/src/proxy/: bypass.rs  config.rs  extract.rs  images.rs  mod.rs  paywall.rs  search.rs  state.rs  stats.rs
src-tauri/src/server/: crash_telemetry.rs  log_classifier.rs  mod.rs
src-tauri/src/shell/: catalog.rs  context.rs  integration.rs  kind.rs  mod.rs  platform.rs  pty.rs  session.rs  winps.rs  wsl.rs
src/lib/: api.test.ts  api.ts  debug-log.ts  feedback.ts  inferenceProbe.ts  markdown-actions.test.ts  markdown-actions.ts  markdown.test.ts  markdown.ts  notify.ts  openrouter.test.ts  openrouter.ts  placeholder.test.ts  ports.ts  sanitize.test.ts  (+3 more)
(+277 files in other folders)
