[package]
name = "haruspex"
version = "0.1.0"
description = "Private local AI with web research capability"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
tokio = { version = "1.50.0", features = ["time", "rt", "fs", "sync", "macros"] }
sha2 = "0.10.9"
sysinfo = "0.36.1"
tauri-plugin-dialog = "2.6.0"
futures-util = "0.3.32"
