[package]
name = "haruspex"
version = "0.1.22"
description = "Private local AI with web research capability"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "multipart", "query", "rustls", "stream"] }
tokio = { version = "1.50.0", features = ["time", "rt", "fs", "sync", "macros"] }
sha2 = "0.10.9"
sysinfo = "0.36.1"
tauri-plugin-dialog = "2.6.0"
futures-util = "0.3.32"
scraper = "0.26.0"
urlencoding = "2.1.3"
url = "2.5.8"
ipnet = "2.11"
libc = "0.2.183"
rusqlite = { version = "0.39.0", features = ["bundled"] }
cpal = "0.17.1"
rodio = "0.21.1"
hound = "3.5.1"
pdf-extract = "0.9"
pdfium-render = "0.9"
printpdf = "0.9"
calamine = "0.30"
zip = "4.6"
image = "0.25"
base64 = "0.22"
rust_xlsxwriter = "0.90"

# Email integration (Phase 10). async-imap handles IMAP over TLS,
# mail-parser handles RFC 5322 / MIME decoding. lettre is stubbed in
# 10.1 for SMTP sending in Phase 10.2.
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
