[package]
name = "haruspex"
version = "0.1.50"
description = "Private local AI with web research capability"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
# Native clipboard access. The webview's navigator.clipboard.readText() is
# unreliable under WebKitGTK; arboard reads from the OS directly and also
# exposes the X11/Wayland PRIMARY selection for middle-click paste. Text only
# (drop the default image-data feature and its heavy `image` dependency).
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "multipart", "query", "rustls", "stream"] }
tokio = { version = "1.50.0", features = ["time", "rt", "fs", "sync", "macros", "process", "io-util"] }
sha2 = "0.10.9"
sysinfo = "0.36.1"
tauri-plugin-dialog = "2.6.0"
futures-util = "0.3.32"
scraper = "0.26.0"
urlencoding = "2.1.3"
url = "2.5.8"
ipnet = "2.11"
libc = "0.2.183"
rusqlite = { version = "0.39.0", features = ["bundled"] }
cpal = "0.17.1"
rodio = "0.21.1"
hound = "3.5.1"
pdf-extract = "0.9"
pdfium-render = "0.9"
printpdf = { version = "0.9", features = ["png", "jpeg", "gif"] }
calamine = "0.30"
zip = "4.6"
image = "0.25"
base64 = "0.22"
rust_xlsxwriter = "0.90"
portable-pty = "0.8"

# Email integration (Phase 10). async-imap handles IMAP over TLS,
# mail-parser handles RFC 5322 / MIME decoding. lettre is stubbed in
# 10.1 for SMTP sending in Phase 10.2.
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
# no-serde-warnings silences ts-rs's "failed to parse serde attribute" notices
# for #[serde(skip_serializing_if = ...)] — ts-rs can't translate the runtime
# predicate to TypeScript, but the affected fields are already #[ts(optional)],
# so the generated bindings are correct and the warning is pure noise.
ts-rs = { version = "10.1.0", features = ["serde-compat", "no-serde-warnings"] }
# Unicode normalization (NFKC) for the fuzzy-match fallback in fs_edit_text.
unicode-normalization = "0.1"
# ripgrep's own engine + gitignore walker + glob matcher, for the Code tab's
# code_grep / code_glob tools (gitignore semantics match `rg`).
grep = "0.3"
ignore = "0.4"
globset = "0.4"
